@@ -8,13 +8,14 @@ import org.antlr.v4.runtime.tree.TerminalNode;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.stream.Collectors;
 
 /**
  * 用于查询语句Statement的类.
  * 当前支持查询：if-else/switch/for/while/do-while/try-catch-finally/throw
  * */
-public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
+public class StmtVisitor extends JavaBaseVisitor<List<StatementContext>> {
     /**
      * 查询语句的类型.
      * */
@@ -54,8 +55,8 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @date 2022/05/05
      * */
     @Override
-    public ArrayList<StatementContext> visitTerminal(TerminalNode node) {
-        ArrayList<StatementContext> result = new ArrayList<>();
+    public List<StatementContext> visitTerminal(TerminalNode node) {
+        List<StatementContext> result = new ArrayList<>();
         ParseTree parent = node.getParent();
         if ((target == STMT.IF && node.getText().equals("if")) ||
             (target == STMT.SWITCH && node.getText().equals("switch")) ||
@@ -76,7 +77,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @date 2022/05/05
      * */
     @Override
-    protected ArrayList<StatementContext> aggregateResult(ArrayList<StatementContext> aggregate, ArrayList<StatementContext> nextResult) {
+    protected List<StatementContext> aggregateResult(List<StatementContext> aggregate, List<StatementContext> nextResult) {
         if (aggregate == null) return nextResult;   // 父结点结果为空, 则返回子结点的结果
         if (nextResult == null) return aggregate;   // 子结点结果为空, 则返回父结点的结果
         aggregate.addAll(nextResult);               // 否则, 返回父子结点结果的拼接
@@ -89,7 +90,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return 所有if语句结点
      * @date 2022/05/05
      * */
-    public ArrayList<StatementContext> ifStmtVisitor(CompilationUnitContext ctx) {
+    public List<StatementContext> ifStmtVisitor(CompilationUnitContext ctx) {
         this.target = STMT.IF;
         return visit(ctx);
     }
@@ -102,19 +103,19 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return: 满足条件的if语句结点
      * @date 2022/05/06
      */
-    public ArrayList<StatementContext> ifStmtFilter(ArrayList<StatementContext> stmtList, String cond, IF_TYPE ifType) {
+    public List<StatementContext> ifStmtFilter(List<StatementContext> stmtList, String cond, IF_TYPE ifType) {
         // 根据if语句的类型过滤
-        stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+        stmtList = stmtList.stream().filter(stmtCtx ->
             (ifType == IF_TYPE.WITH_ELSE && stmtCtx.ELSE() != null) ||   // 有else语句
             (ifType == IF_TYPE.WITHOUT_ELSE && stmtCtx.ELSE() == null) ||// 无else语句
             (ifType == IF_TYPE.DONT_CARE)                                // 不关心是否有else语句
-        ).collect(Collectors.toList());
+        ).toList();
         // 根据if语句的判断条件过滤, 如果条件一致则保留
         if (cond != null) {
             String s = cond.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.parExpression().expression().getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         return stmtList;
     }
@@ -125,7 +126,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return 所有switch语句结点
      * @date 2022/05/05
      * */
-    public ArrayList<StatementContext> switchStmtVisitor(CompilationUnitContext ctx) {
+    public List<StatementContext> switchStmtVisitor(CompilationUnitContext ctx) {
         this.target = STMT.SWITCH;
         return visit(ctx);
     }
@@ -137,13 +138,13 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return: 满足条件的switch语句结点
      * @date 2022/05/06
      */
-    public ArrayList<StatementContext> switchStmtFilter(ArrayList<StatementContext> stmtList, String cond) {
+    public List<StatementContext> switchStmtFilter(List<StatementContext> stmtList, String cond) {
         // 根据switch语句的判断条件过滤
         if (cond != null) {
             String s = cond.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.parExpression().expression().getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         return stmtList;
     }
@@ -154,7 +155,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return 所有for语句结点
      * @date 2022/05/05
      * */
-    public ArrayList<StatementContext> forStmtVisitor(CompilationUnitContext ctx) {
+    public List<StatementContext> forStmtVisitor(CompilationUnitContext ctx) {
         this.target = STMT.FOR;
         return visit(ctx);
 
@@ -169,24 +170,24 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return: 满足条件的for语句结点
      * @date 2022/05/06
      */
-    public ArrayList<StatementContext> forStmtFilter(ArrayList<StatementContext> stmtList, String forInit, String forCond, String forUpdate) {
+    public List<StatementContext> forStmtFilter(List<StatementContext> stmtList, String forInit, String forCond, String forUpdate) {
         if (forInit != null) {// 根据for的初始化语句过滤
             String s = forInit.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.forControl().forInit().getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         if (forCond != null) {// 根据for的循环条件过滤
             String s = forCond.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.forControl().expression().getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         if (forUpdate != null) {// 根据for的更新语句过滤
             String s = forUpdate.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.forControl().forUpdate().getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         return stmtList;
     }
@@ -197,7 +198,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return 所有while语句结点
      * @date 2022/05/05
      * */
-    public ArrayList<StatementContext> whileStmtVisitor(CompilationUnitContext ctx) {
+    public List<StatementContext> whileStmtVisitor(CompilationUnitContext ctx) {
         this.target = STMT.WHILE;
         return visit(ctx);
     }
@@ -209,13 +210,13 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return: 满足条件的while语句结点
      * @date 2022/05/06
      */
-    public ArrayList<StatementContext> whileStmtFilter(ArrayList<StatementContext> stmtList, String cond) {
+    public List<StatementContext> whileStmtFilter(List<StatementContext> stmtList, String cond) {
         // 根据while语句的循环条件过滤
         if (cond != null) {
             String s = cond.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.parExpression().expression().getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         return stmtList;
     }
@@ -226,7 +227,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return 所有do-while语句结点
      * @date 2022/05/05
      * */
-    public ArrayList<StatementContext> doWhileStmtVisitor(CompilationUnitContext ctx) {
+    public List<StatementContext> doWhileStmtVisitor(CompilationUnitContext ctx) {
         this.target = STMT.DO_WHILE;
         return visit(ctx);
     }
@@ -238,13 +239,13 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return: 满足条件的do-while语句结点
      * @date 2022/05/06
      */
-    public ArrayList<StatementContext> doWhileStmtFilter(ArrayList<StatementContext> stmtList, String cond) {
+    public List<StatementContext> doWhileStmtFilter(List<StatementContext> stmtList, String cond) {
         // 根据do-while语句的循环条件过滤
         if (cond != null) {
             String s = cond.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.parExpression().expression().getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         return stmtList;
     }
@@ -255,7 +256,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return 所有try语句结点
      * @date 2022/05/05
      * */
-    public ArrayList<StatementContext> tryStmtVisitor(CompilationUnitContext ctx) {
+    public List<StatementContext> tryStmtVisitor(CompilationUnitContext ctx) {
         this.target = STMT.TRY;
         return visit(ctx);
     }
@@ -268,27 +269,27 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return: 满足条件的try语句结点.
      * @date 0222/05/06
      */
-//    public ArrayList<StatementContext> tryStmtFilter(ArrayList<StatementContext> stmtList, TRY_TYPE tryType, String[] catchCond) {
-    public ArrayList<StatementContext> tryStmtFilter(ArrayList<StatementContext> stmtList, String catchCond, TRY_TYPE tryType) {
+//    public List<StatementContext> tryStmtFilter(List<StatementContext> stmtList, TRY_TYPE tryType, String[] catchCond) {
+    public List<StatementContext> tryStmtFilter(List<StatementContext> stmtList, String catchCond, TRY_TYPE tryType) {
         // 根据try-catch-finally语句的类型过滤: 是否有catch/finally
-        stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+        stmtList = stmtList.stream().filter(stmtCtx ->
             (tryType == TRY_TYPE.WITH_CATCH_WITH_FINALLY && stmtCtx.catches() != null && stmtCtx.finallyBlock() != null) ||
             (tryType == TRY_TYPE.WITH_CATCH_WITHOUT_FINALLY && stmtCtx.catches() != null && stmtCtx.finallyBlock() == null) ||
             (tryType == TRY_TYPE.WITHOUT_CATCH_WITH_FINALLY && stmtCtx.catches() == null && stmtCtx.finallyBlock() != null) ||
             (tryType == TRY_TYPE.DONT_CARE)
-        ).collect(Collectors.toList());
+        ).toList();
         // 根据catch的捕获条件过滤
         if (catchCond != null) {
             String s = catchCond.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.parExpression().expression().getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
 //        if (catchCond != null) {
 //            for (int i=0; i<catchCond.length; i++) {
 //                final int idx = i;
 //                String s = catchCond[idx].replaceAll(" ", "");
-//                stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx -> {
+//                stmtList = (List<StatementContext>) stmtList.stream().filter(stmtCtx -> {
 //                    // 若没有catch语句, 或catch语句数量不足, 则过滤
 //                    if (stmtCtx.catches() == null || stmtCtx.catches().catchClause(idx) == null) return false;
 //                    // 否则保留
@@ -305,7 +306,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @return 所有throw语句结点
      * @date 2022/05/05
      * */
-    public ArrayList<StatementContext> throwStmtVisitor(CompilationUnitContext ctx) {
+    public List<StatementContext> throwStmtVisitor(CompilationUnitContext ctx) {
         this.target = STMT.THROW;
         return visit(ctx);
     }
@@ -316,13 +317,13 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
      * @param expr: throw语句抛出的表达式. 若为null, 则本项不作为过滤条件
      * @return: 满足条件的throw语句结点
      */
-    public ArrayList<StatementContext> throwStmtFilter(ArrayList<StatementContext> stmtList, String expr) {
+    public List<StatementContext> throwStmtFilter(List<StatementContext> stmtList, String expr) {
         // 根据throw语句抛出的表达式过滤
         if (expr != null) {
             String s = expr.replaceAll("[ \\t\\n]", "");
-            stmtList = (ArrayList<StatementContext>) stmtList.stream().filter(stmtCtx ->
+            stmtList = stmtList.stream().filter(stmtCtx ->
                 s.equals(stmtCtx.expression(0).getText())
-            ).collect(Collectors.toList());
+            ).toList();
         }
         return stmtList;
     }
@@ -330,7 +331,7 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
     /**
      * 测试用输出函数
      * */
-    private static void output(ArrayList<StatementContext> stmts) {
+    private static void output(List<StatementContext> stmts) {
         for (StatementContext stmt: stmts) {
             System.out.println(stmt.getText());
         }
@@ -348,39 +349,39 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
         System.out.println("\n\u001b[36;4m@ if statement test\u001b[0m");
         System.out.println("# find all if with else, condition: i == 0");
         String c1 = "i == 0";
-        ArrayList<StatementContext> s1 = stmtVisitor.ifStmtVisitor(root);
+        List<StatementContext> s1 = stmtVisitor.ifStmtVisitor(root);
         s1 = stmtVisitor.ifStmtFilter(s1, c1, IF_TYPE.WITH_ELSE);
         output(s1);
         System.out.println("# find all if without else, condition: i == 1");
         String c2 = "i == 1";
-        ArrayList<StatementContext> s2 = stmtVisitor.ifStmtVisitor(root);
+        List<StatementContext> s2 = stmtVisitor.ifStmtVisitor(root);
         s2 = stmtVisitor.ifStmtFilter(s2, c2, IF_TYPE.WITHOUT_ELSE);
         output(s2);
 
         System.out.println("\n\u001b[36;4m@ switch statement test\u001b[0m");
         System.out.println("# find all switch, condition: i");
         String c3 = "i";
-        ArrayList<StatementContext> s3 = stmtVisitor.switchStmtVisitor(root);
+        List<StatementContext> s3 = stmtVisitor.switchStmtVisitor(root);
         s3 = stmtVisitor.switchStmtFilter(s3, c3);
         output(s3);
 
         System.out.println("\n\u001b[36;4m@ for statement test\u001b[0m");
         System.out.println("# find all for statement, forInit: i = 0");
         String c4 = " i = 0";
-        ArrayList<StatementContext> s4 = stmtVisitor.forStmtVisitor(root);
+        List<StatementContext> s4 = stmtVisitor.forStmtVisitor(root);
         s4 = stmtVisitor.forStmtFilter(s4, c4, null, null);
         output(s4);
 
         System.out.println("\n\u001b[36;4m@ while statement test\u001b[0m");
         System.out.println("# find all while statement, condition: null");
-        ArrayList<StatementContext> s5 = stmtVisitor.whileStmtVisitor(root);
+        List<StatementContext> s5 = stmtVisitor.whileStmtVisitor(root);
         s5 = stmtVisitor.whileStmtFilter(s5, null);
         output(s5);
 
         System.out.println("\n\u001b[36;4m@ do-while statement test\u001b[0m");
         System.out.println("# find all do-while statement, condition: i < 5");
         String c6 = "i < 5";
-        ArrayList<StatementContext> s6 = stmtVisitor.doWhileStmtVisitor(root);
+        List<StatementContext> s6 = stmtVisitor.doWhileStmtVisitor(root);
         s6 = stmtVisitor.doWhileStmtFilter(s6, c6);
         output(s6);
 
@@ -390,18 +391,18 @@ public class StmtVisitor extends JavaBaseVisitor<ArrayList<StatementContext>> {
 //        String[] c7 = new String[2];
 //        c7[0] = "IOException e1";
 //        c7[1] = "Exception e2";
-//        ArrayList<StatementContext> s7 = stmtVisitor.tryStmtVisitor(root);
+//        List<StatementContext> s7 = stmtVisitor.tryStmtVisitor(root);
 //        s7 = stmtVisitor.tryStmtFilter(s7, c7, TRY_TYPE.WITH_CATCH_WITHOUT_FINALLY);
 //        output(s7);
         System.out.println("# find all try statement, without catch statement, with finally statement");
-        ArrayList<StatementContext> s8 = stmtVisitor.tryStmtVisitor(root);
+        List<StatementContext> s8 = stmtVisitor.tryStmtVisitor(root);
         s8 = stmtVisitor.tryStmtFilter(s8, null, TRY_TYPE.WITHOUT_CATCH_WITH_FINALLY);
         output(s8);
 
         System.out.println("\n\u001b[36;4m@ throw statement test\u001b[0m");
         System.out.println("# find all throw statement, condition: new RuntimeException()");
         String c9 = "new RuntimeException()";
-        ArrayList<StatementContext> s9 = stmtVisitor.throwStmtVisitor(root);
+        List<StatementContext> s9 = stmtVisitor.throwStmtVisitor(root);
         s9 = stmtVisitor.throwStmtFilter(s9, c9);
         output(s9);
 
